Fix z-index for fullscreen menu

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -219,6 +219,7 @@ iframe {
         -webkit-animation-delay: 2s;
         animation: slide 0.5s forwards;
         animation-delay: 2s;
+        z-index: 0;
         // height: 0;
         // width: 0;
     }
